2002-09-12  Tim Legant  <tim@catseye.net>

	* config-filter.ht: Added 'hold' action to list of incoming
	actions.

2002-09-12  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* requirements.ht (Links): Update Python minimum requirement to
	version 2.1.2.

2002-09-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* tmda-ofmipd.ht: Document `-R' option.

2002-08-27  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* inuse.ht (Links): Add Stanford Computer Graphics Laboratory and
	CentralPets.
	
2002-08-26  Tim Legant  <tim@catseye.net>

	* config-filter.ht (username): Fixed example under Variable
	Interpolation.  It had used 'from' instead of 'from-file'.

2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* features.ht (Links): Add smart auto-responding.

2002-08-19  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* config-links.h: Add sidebar link to TMDA Filter Sources.
	
2002-08-18  Tim Legant  <tim@catseye.net>

	* config-filter.ht: Significantly shortened file.  Added
	documentation for macros, included filters and variable
	interpolation.  Moved source- and match-specific documentation to
	new file, filter-sources.ht.

	* filter-sources.ht: New file.

2002-08-13  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* inuse.ht (Links): Add dungog.net.

2002-08-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* press.ht: New page.

2002-08-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Gravital.net.

2002-07-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Internet Nebraska, 2ndmail.com, and
	eScrubber.
	
2002-07-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Mention tmda.el.

2002-07-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-ofmipd.ht: Document -A option.

2002-07-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
