@@ -13,3 +13,18 @@ TMDA is featured in this story about countermeasures, which is the
 last in a three-part series that examines the surge in spam, the
 people behind it, and the struggle to thwart them.
 </ul>
+
+<h4>September 2002</h4>
+<ul>
+<li><a href="http://www.aardvark.co.nz/daily/2002/0926.shtml" TARGET="Resource Window">
+<b>At Last, A Cure For Spam</b></a><br>
+The Daily Aardvark, Bruce Simpson<br>
+
+<blockquote>
+``Believe it or not a cure for spam is readily available and 100% free -- 
+so why isn't your ISP using it?''
+</blockquote>
+
+A rave review of TMDA given to the readers of the Daily Aardvark, New
+Zealand's leading source of Net-Industry news and commentary.
+</ul>
