@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Aug 19 11:29:09 2002 -->
+<!-- Wed Sep 25 19:28:00 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -151,6 +151,20 @@ last in a three-part series that examines the surge in spam, the
 people behind it, and the struggle to thwart them.
 </ul>
 
+<h4>September 2002</h4>
+<ul>
+<li><a href="http://www.aardvark.co.nz/daily/2002/0926.shtml" TARGET="Resource Window">
+<b>At Last, A Cure For Spam</b></a><br>
+The Daily Aardvark, Bruce Simpson<br>
+
+<blockquote>
+``Believe it or not a cure for spam is readily available and 100% free -- 
+so why isn't your ISP using it?''
+</blockquote>
+
+A rave review of TMDA given to the readers of the Daily Aardvark, New
+Zealand's leading source of Net-Industry news and commentary.
+</ul>
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
 </TABLE><!-- end of page table -->
