@@ -1,3 +1,7 @@
+2002-09-25  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* press.ht (Links): Add Daily Aardvark story.
+
 2002-09-12  Tim Legant  <tim@catseye.net>
 
 	* config-filter.ht: Added 'hold' action to list of incoming
